--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,32 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<div class="pmd-card pmd-card-inverse pmd-z-depth">
+    <h1>Responsive Data table</h1>
+    <table id="tableInverse" class="table pmd-table table-hover table-striped table-inverse display responsive nowrap" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>Rank</th>
+                <th>Grade</th>
+                <th>views</th>
+                <th>Channel name</th>
+                <th>Video</th>
+                <th>Uploads</th>
+                <th> Subscribers</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each data}}
+            <tr>
+                <td>{{this.rank}}</td>
+                <td>{{this.grade}}</td>
+                <td>{{this.views}}</td>
+                <td>{{this.name}}</td>
+                <td>{{this.video}}</td>
+                <td>{{this.uploads}}</td>
+                <td>{{this.subscribers}}</td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+</div>
