--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    <link href="stylesheets/style.css" rel="stylesheet">
   </head>
+  
   <body>
+
+
     {{{body}}}
+
+    <!-- jQuery before Propeller.js -->
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="propeller/js/propeller.min.js"></script>
+     
+
+<!-- Datatable js -->
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+
+<!-- Datatable Bootstrap -->
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"></script>
+
+<!-- Datatable responsive js-->
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/responsive/2.1.0/js/dataTables.responsive.min.js"></script>
+
+<!-- Datatable select js-->
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/select/1.2.0/js/dataTables.select.min.js"></script>
+
+<script>
+//Propeller  Customised Javascript code 
+$(document).ready(function() {
+	var exampleDatatable = $('#tableInverse').DataTable({
+		responsive: {
+			details: {
+				type: 'column',
+				target: 'tr'
+			}
+		},
+		columnDefs: [ {
+			className: 'control',
+			orderable: false,
+			targets:   1
+		} ],
+		order: [ 1, 'asc' ],
+		bFilter: true,
+		bLengthChange: true,
+		pagingType: "simple",
+		"paging": true,
+		"searching": true,
+		"language": {
+			"info": " _START_ - _END_ of _TOTAL_ ",
+			"sLengthMenu": "<span class='custom-select-title'>Rows per page:</span> <span class='custom-select'> _MENU_ </span>",
+			"sSearch": "",
+			"sSearchPlaceholder": "Search",
+			"paginate": {
+				"sNext": " ",
+				"sPrevious": " "
+			},
+		},
+		dom:
+			"<'pmd-card-title'<'data-table-title-responsive'><'search-paper pmd-textfield'f>>" +
+			"<'row'<'col-sm-12'tr>>" +
+			"<'pmd-card-footer' <'pmd-datatable-pagination' l i p>>",
+	});
+	
+	/// Select value
+	$('.custom-select-info').hide();
+	
+	$("div.data-table-title").html('<h2 class="pmd-card-title-text">Table Card</h2>');
+	$("div.data-table-title").html('<h2 class="pmd-card-title-text">Table Responsive</h2>');
+	$(".custom-select-action").html('<button class="btn btn-sm pmd-btn-fab pmd-btn-flat pmd-ripple-effect btn-primary" type="button"><i class="material-icons pmd-sm">delete</i></button><button class="btn btn-sm pmd-btn-fab pmd-btn-flat pmd-ripple-effect btn-primary" type="button"><i class="material-icons pmd-sm">more_vert</i></button>');
+		
+} );
+</script>
   </body>
 </html>
