File upload and database insertion done

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <p>Welcome to {{title}}</p>
 
 <div class="pmd-card pmd-card-inverse pmd-z-depth">
-    <h1>Responsive Data table</h1>
+    <h1>{{message}}</h1>
     <table id="tableInverse" class="table pmd-table table-hover table-striped table-inverse display responsive nowrap" cellspacing="0" width="100%">
         <thead>
             <tr>
@@ -10,7 +10,6 @@
                 <th>Grade</th>
                 <th>views</th>
                 <th>Channel name</th>
-                <th>Video</th>
                 <th>Uploads</th>
                 <th> Subscribers</th>
             </tr>
@@ -22,7 +21,6 @@
                 <td>{{this.grade}}</td>
                 <td>{{this.views}}</td>
                 <td>{{this.name}}</td>
-                <td>{{this.video}}</td>
                 <td>{{this.uploads}}</td>
                 <td>{{this.subscribers}}</td>
             </tr>
