--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,8 +11,7 @@
 	<div class="pmd-sidebar-overlay"></div>
 </nav>
 
-<div class="pmd-card pmd-card-inverse pmd-z-depth">
-    <h1>{{message}}</h1>
+<div class="pmd-card pmd-card-inverse pmd-z-depth-4">
     <table id="tableInverse" class="table pmd-table table-hover table-striped table-inverse display responsive nowrap" cellspacing="0" width="100%">
         <thead>
             <tr>
