--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,6 +32,18 @@
 /* Propeller Datatable */
 @import "http://propeller.in/components/data-table/css/pmd-datatable.css";
 body {
-  background-color: #222;
+  background-image: url('/images/halo.jpg');
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 100px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Corben', Georgia, Times, serif;
+}
+p, div {
+    font-family: 'Nobile', Helvetica, Arial, sans-serif;
+}
+.container-narrow {
+  background: url('/images/cream_dust.png') repeat 0 0;
 }
