--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{{title}}</title>
-
+<link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
+ <link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
     <link href="stylesheets/style.css" rel="stylesheet">
   </head>
   
@@ -34,7 +35,8 @@
 
 <!-- Datatable select js-->
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/select/1.2.0/js/dataTables.select.min.js"></script>
-
+<script>
+</script>
 <script>
 //Propeller  Customised Javascript code 
 $(document).ready(function() {
